Fixed : Navbar burger icon overlaps with brand logo #287

--- a/gwt-material/src/main/resources/gwt/material/design/public/css/overridecss.css
+++ b/gwt-material/src/main/resources/gwt/material/design/public/css/overridecss.css
@@ -271,6 +271,7 @@ table .gwt-CheckBox label {
 }
 nav .brand-logo {
 	padding-left: 16px;
+	margin-left: 60px;
 }
 .side-nav li {
 	padding: 0 !important;
